# is4010-final-artgen

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: tests.yml
src/: main.rs
tests/: cli.rs
